syntax = "proto3";

message EntryHeader {
    bytes hash = 1;
}

message EntryContent {
    bytes hash = 1;
    bytes content = 2;
}

message BlockHeader {
    bytes rootHash = 1;
    bytes prevHash = 2;
    uint32 targetSize = 3;
}

message BlockContent {
    bytes rootHash = 1;
    uint64 blockNum = 2;
    bytes content = 3;
}

message PeerState {
    string id = 1;
    BlockHeader favBlock = 2;
    uint64 epoch = 3;
    bytes signature = 4;

}

message State {
    map<string, PeerState> = 1;
}
